--- a/index.html
+++ b/index.html
@@ -75,10 +75,11 @@
             </div>
 
             <div class="editor-footer">
-                <button id="addNewItemBtn" class="btn btn-primary">+ Add New Item</button>
+                <button id="addNewItemBtn" class="btn btn-primary">➕ Add New Item</button>
                 <div class="footer-right">
-                    <button id="saveListBtn" class="btn btn-success">💾 Save</button>
-                    <button id="shareListBtn" class="btn btn-success">📤 Share</button>
+                    <button id="saveListBtn" class="btn btn-success">✔️ Save List</button>
+                    <button id="exportPdfBtn" class="btn btn-secondary">📄 Export PDF</button>
+                    <button id="shareListBtn" class="btn btn-success">📲 Share WhatsApp</button>
                 </div>
             </div>
         </div>
@@ -108,17 +109,7 @@
         </div>
     </div>
 
-    <!-- Share Modal -->
-    <div id="shareModal" class="modal" style="display: none;">
-        <div class="modal-content">
-            <h3>List Saved Successfully!</h3>
-            <p>Would you like to share this list?</p>
-            <div class="modal-actions">
-                <button id="shareYesBtn" class="btn btn-success">📤 Share on WhatsApp</button>
-                <button id="shareNoBtn" class="btn btn-secondary">Close</button>
-            </div>
-        </div>
-    </div>
+
 
     <!-- Edit Header Modal -->
     <div id="editHeaderModal" class="modal" style="display: none;">
